<resources>
    <string name="app_name">Wallpaper</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="me">Me</string>
    <string name="favorite_s">Favorite\'s</string>
    <string name="saved">Saved</string>
    <string name="DIY">DIY</string>
    <string name="how_to_set_live_wallpaper">How to set Live Wallpaper</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="help_center">Help Center</string>
    <string name="About_us">About Us</string>
    <string name="setWallpaper">Set As Wallpaper</string>
    <string name="setAsWallpaper">What would you like to do</string>
    <string name="developed_by">Developed by team Flax Studio</string>
    <string name="tagline"># beautify your device\'s walls</string>


    <!-- Text For Subscription Fragment -->

    <string name="upgrade">Upgrade tp Premium</string>
    <string name="save60"> SAVE 60%</string>
    <string name="month1">12</string>
    <string name="month">months</string>
    <string name="price1">₹5.00/mt</string>
    <string name="months">months</string>
    <string name="get_subs">Get 3 Month in ₹ 39</string>
    <string name="subscribe_text">Why You Should Purchase Premium ?</string>
    <string name="subscribe_text_desc">Refresh your device appearance with a diverse range
        of personalized wallpapers that add
        a touch of style to your screen.</string>
    <string name="TC">Terms and Condition Apply. Read More…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="both_screens">Set as Home and Lock Screen</string>
    <string name="HomeScreen">Set as Home Screen</string>
    <string name="LockScreen">Set as Lock Screen</string>
    <string name="apply">Apply</string>


    <string name="share">Share</string>
    <string name="share_ui">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="premium">Get Premium</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>



</resources>