<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.cardview.CircularRevealCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="@dimen/rounded_high"
    app:cardBackgroundColor="@color/primary_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_text">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/setAsWallpaper"
            android:textSize="@dimen/medium_text"
            android:padding="@dimen/rounded_low"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/group_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/group_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rounded_low"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/both_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/both_screens"
                android:textColor="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/homeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HomeScreen"
                android:textColor="@color/white" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/lockScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LockScreen"
                android:textColor="@color/white" />
        </RadioGroup>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textSize="@dimen/medium_text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/rounded_low"
            app:layout_constraintTop_toBottomOf="@id/group_btn"
            app:layout_constraintStart_toStartOf="@id/group_btn"
            app:layout_constraintEnd_toEndOf="@id/group_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.circularreveal.cardview.CircularRevealCardView>